--- a/Peppermint/LoginTableViewCell.xib
+++ b/Peppermint/LoginTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
@@ -66,6 +67,7 @@
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="loginIconImageView" destination="qvI-MI-mRf" id="cze-U0-J2l"/>
+                <outlet property="loginIconImageViewWidthConstraint" destination="Fg0-6c-oor" id="H4f-z8-TKB"/>
                 <outlet property="loginLabel" destination="PWK-q9-xOg" id="4C2-H8-dwg"/>
             </connections>
             <point key="canvasLocation" x="-5" y="29"/>
